Add currentgamebuild page\route\etc

--- a/views/home.jade
+++ b/views/home.jade
@@ -21,9 +21,9 @@ block content
         p Let's see if we can get a websockets chat test thing working here.
         a(href='/websocketschat', role='button') Go To Chat Test
       .col-sm
-        h3 Heading
-        p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-        a(href='#', role='button') View details
+        h3 Current Game Build
+        p The state of the game as it is.
+        a(href='/currentgamebuild', role='button') Go To Current Game Build
       .col-sm
         h3 Heading
         p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
