Add two shield hole versions

--- a/views/home.jade
+++ b/views/home.jade
@@ -21,10 +21,10 @@ block content
         p Let's see if we can get a websockets chat test thing working here.
         a(href='/websocketschat', role='button') Go To Chat Test
       .col-sm
-        h3 Current Game Build
-        p The state of the game as it is.
-        a(href='/currentgamebuild', role='button') Go To Current Game Build
+        h3 Multi-shield Hole
+        p Can have multiple shield holes.
+        a(href='/currentgamebuild', role='button') Go To Multi-shield Hole Game Build
       .col-sm
-        h3 Heading
-        p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-        a(href='#', role='button') View details
+        h3 Single-shield Hole
+        p Will have only one shield hole.
+        a(href='/currentgamebuild1', role='button') Go To Single-shield Hole Game Build
