Add current Dev Build, hide old build

--- a/views/home.jade
+++ b/views/home.jade
@@ -20,11 +20,11 @@ block content
         h3 Web Sockets Chat Test
         p Let's see if we can get a websockets chat test thing working here.
         a(href='/websocketschat', role='button') Go To Chat Test
-      .col-sm
-        h3 Multi-shield Hole
-        p Can have multiple shield holes.
-        a(href='/currentgamebuild', role='button') Go To Multi-shield Hole Game Build
+      //- .col-sm
+      //-   h3 Multi-shield Hole
+      //-   p Can have multiple shield holes.
+      //-   a(href='/currentgamebuild', role='button') Go To Multi-shield Hole Game Build
       .col-sm
         h3 Single-shield Hole
         p Will have only one shield hole.
-        a(href='/currentgamebuild1', role='button') Go To Single-shield Hole Game Build
+        a(href='/currentgamebuild1', role='button') Go To Single-shield Hole Dev Game Build
