Hide or remove unused website features

--- a/views/home.jade
+++ b/views/home.jade
@@ -16,10 +16,10 @@ block content
           div= info.msg
 
     .row
-      .col-sm
-        h3 Web Sockets Chat Test
-        p Let's see if we can get a websockets chat test thing working here.
-        a(href='/websocketschat', role='button') Go To Chat Test
+      //- .col-sm
+      //-   h3 Web Sockets Chat Test
+      //-   p Let's see if we can get a websockets chat test thing working here.
+      //-   a(href='/websocketschat', role='button') Go To Chat Test
       .col-sm
         h3 Current Game Build
         p Arena Battle: Space
