--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -2,8 +2,8 @@
   ul.list-inline
     li
       a(href='/') Home
-    li
-      a(href='/contact') Contact
+    //- li
+    //-   a(href='/contact') Contact
     ul.list-inline
       if user
         li
