--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,31 @@
 html {
   position: relative;
   min-height: 100%;
+	background-color: black;
+	font-family: herculanum;
+	color: white;
+}
+
+.shrink {
+  flex-shrink: 1;
+}
+
+.title {
+	text-decoration: underline;
+	font-weight: bold;
+}
+
+@font-face {
+    font-family: herculanum;
+    src: url('/css/Herculanum.ttf');
+}
+
+canvas {
+	border: solid 2px white;
+	background-image: url('/img/loadingunity.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
 }
 
 body {
@@ -16,6 +41,7 @@ footer {
   height: 44px;
   bottom: 0;
   padding: 0 30px;
+	/*color: white;*/
 }
 
 label {
@@ -37,6 +63,7 @@ form button[type="submit"] {
   display: inline-block;
   padding-left: 0;
   list-style: none;
+	font-size: 1em;
 }
 
 .list-inline > li {
