--- a/views/account/reset.jade
+++ b/views/account/reset.jade
@@ -1,22 +1,25 @@
 extends ../layout
 
 block content
-  .container
-    if messages.success
-      div.text-success
-        for success in messages.success
-          div= success.msg
-    if messages.error
-      div.text-danger
-        for error in messages.error
-          div= error.msg
+	.container
+		if messages.success
+			div.text-success
+				for success in messages.success
+					div= success.msg
+		if messages.error
+			div.text-danger
+				for error in messages.error
+					div= error.msg
 
-    h4 Reset Password
+	.section
+	.card
+		.card-content.black-text
+			h4 Reset Password
 
-    form(method='POST')
-      label(for='password') New Password
-      input(type='password', name='password', id='password', placeholder='New password', autofocus)
-      label(for='confirm') Confirm Password
-      input(type='password', name='confirm', id='confirm', placeholder='Confirm password')
-      br
-      button(type='submit') Change Password
+			form(method='POST')
+				label(for='password') New Password
+				input(type='password', name='password', id='password', placeholder='New password', autofocus)
+				label(for='confirm') Confirm Password
+				input(type='password', name='confirm', id='confirm', placeholder='Confirm password')
+				br
+				button.waves-effect.waves-light.btn.light-blue(type='submit') Change Password
