--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,25 +1,30 @@
 doctype html
-html
-  head
-    meta(charset='utf-8')
-    meta(http-equiv='x-ua-compatible', content='ie=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    title= title
-    link(rel='stylesheet', href='/css/normalize.css')
-    link(rel='stylesheet', href='/css/flexboxgrid.css')
-    link(rel='stylesheet', href='/css/main.css')
-  body
-    include includes/header
-    block content
-    include includes/footer
+html(lang="en")
+	head
+		meta(charset='utf-8')
+		meta(http-equiv='x-ua-compatible', content='ie=edge')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
+		title= title
+		link(rel='stylesheet', href='/css/normalize.css')
+		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css")
+		//- link(rel='stylesheet', href='/css/flexboxgrid.css')
+		link(rel='stylesheet', href='/css/main.css')
 
-    script(src='/js/main.js')
+	body
+		include includes/header
+		block content
+		include includes/footer
 
-    //- // Google Analytics: change UA-XXXXX-X to be your site's ID.
-    //- script.
-    //-   (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    //-   function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    //-   e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    //-   e.src='https://www.google-analytics.com/analytics.js';
-    //-   r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    //-   ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+		script(src="https://code.jquery.com/jquery-3.1.0.min.js"	 integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="	 crossorigin="anonymous")
+		script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js")
+		script(src='/js/main.js')
+
+
+		//- // Google Analytics: change UA-XXXXX-X to be your site's ID.
+		//- script.
+		//-	 (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+		//-	 function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+		//-	 e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+		//-	 e.src='https://www.google-analytics.com/analytics.js';
+		//-	 r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+		//-	 ga('create','UA-XXXXX-X','auto');ga('send','pageview');
