Add title image above header

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,8 @@ html(lang="en")
 		link(rel='stylesheet', href='/css/main.css')
 
 	body
+		.center-align
+			img(src="/img/titlestars1.png" alt="Arena Battle: Space title image")
 		include includes/header
 		block content
 		include includes/footer
