--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -1,6 +1,6 @@
 .nav
 	.nav-wrapper.black.white-text
-		ul.list-inline
+		ul.list-inline.bump-right
 			li
 				a.waves-effect.waves-light.btn.light-blue(href='/') Leaderboards
 			ul.list-inline
