--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -20,6 +20,8 @@
 						a.waves-effect.waves-light.btn.light-blue(href='/login') Account Settings
 				li
 					a.waves-effect.waves-light.btn.light-blue.tooltipped(data-position="bottom" data-delay="0" data-tooltip="Be patient. May take a moment or three to launch." href="/game") Launch Game
+				li
+					a.waves-effect.waves-light.btn.light-blue(href='http://superuser.com/questions/836832/how-can-i-enable-webgl-in-my-browser' target='_blank') WebGL Issues?
 				//- li
 				//-	 a(href='/signup') Sign up
 //- /*nav
