--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html(lang="en")
 
 	body
 		.center-align
-			img(src="/img/titlestars1.png" alt="Arena Battle: Space title image")
+			img.img-header(src="/img/titlestars1.png" alt="Arena Battle: Space title image")
 		include includes/header
 		block content
 		include includes/footer
