--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,14 @@ html {
 	font-weight: bold;
 }
 
+@media screen and (max-width: 400px) {
+
+	.title {
+		font-size: 1.2em;
+	}
+
+}
+
 .bump-right {
 	margin-left: 20px;
 }
