Remove .title class from leaderboard tables

--- a/views/homehighlevels.jade
+++ b/views/homehighlevels.jade
@@ -41,10 +41,10 @@ block content
 						table#homehighlevels.striped.responsive-table
 							thead
 								tr
-									th.flow-text.title(data-field='lifegamescore') Highest Levels
-									th.flow-text.title(data-field='#')
-									th.flow-text.title(data-field='username') Username
-									th.flow-text.title(data-field='lifegamescore') Level
+									th.flow-text(data-field='lifegamescore') Highest Levels
+									th.flow-text(data-field='#')
+									th.flow-text(data-field='username') Username
+									th.flow-text(data-field='lifegamescore') Level
 							tbody
 								each player, index in players
 									tr
