Initial Angular setup

--- a/views/homehighscores.jade
+++ b/views/homehighscores.jade
@@ -20,7 +20,7 @@ block content
 			.col.s12
 				.card
 					.card-content.black-text.hide-on-med-and-down
-						h1.title Leaderboard
+						h1.title Leaderboard {{view.boom}}
 						ul.list-inline
 							li: a.waves-effect.waves-light.btn.light-blue.darken-4(href="/#homehighscores") High Scores
 							li: a.waves-effect.waves-light.btn.light-blue(href="/homelifescores/#homelifescores") Lifetime Scores
