--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang="en")
+html(lang="en" ng-app="ArenaBattleSpace")
 	head
 		meta(charset='utf-8')
 		meta(http-equiv='x-ua-compatible', content='ie=edge')
@@ -9,8 +9,9 @@ html(lang="en")
 		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css")
 		//- link(rel='stylesheet', href='/css/flexboxgrid.css')
 		link(rel='stylesheet', href='/css/main.css')
+		script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js")
 
-	body
+	body(ng-controller="MainController")
 		.center-align
 			img.img-header(src="/img/titlestars1.png" alt="Arena Battle: Space title image")
 		include includes/header
@@ -20,6 +21,8 @@ html(lang="en")
 		script(src="https://code.jquery.com/jquery-3.1.0.min.js"	 integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="	 crossorigin="anonymous")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js")
 		script(src='/js/main.js')
+		script(src='/js/app.js')
+		script(src='/js/controllers.js')
 
 
 		//- // Google Analytics: change UA-XXXXX-X to be your site's ID.
